Bug 153185 - The linked ole object disappears after export
Summary: The linked ole object disappears after export
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.6.0
Keywords:
Depends on:
Blocks: PPTX-OLE
  Show dependency treegraph
 
Reported: 2023-01-24 13:44 UTC by NISZ LibreOffice Team
Modified: 2023-02-01 08:13 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Sample file (8.97 KB, application/vnd.oasis.opendocument.text)
2023-01-24 13:45 UTC, NISZ LibreOffice Team
Details
Sample file ODP (11.46 KB, application/vnd.oasis.opendocument.presentation)
2023-01-24 13:46 UTC, NISZ LibreOffice Team
Details
Sample file PPTX (23.11 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2023-01-24 13:46 UTC, NISZ LibreOffice Team
Details
Screenshot of the problem (84.53 KB, image/png)
2023-01-24 13:47 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2023-01-24 13:44:04 UTC
Description:
In Impress, creating an OLE object after saving in PPTX and then reloading the file. The linked OLE disappears.


Steps to Reproduce:
1: Create a new file in Impress.
2: Click Insert -> OLE object -> OLE object.
3: Create file, then select the document you want to attach.
4: Check Link to file, then press OK.
5: Save as PPTX.
6: File -> Reload.

Actual Results:
After saving to PPTX the OLE object will disappear.

Expected Results:
After saving to PPTX, the OLE object does not disappear.


Reproducible: Always


User Profile Reset: No

Additional Info:
LibreOffice details:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 713493c107e6a210ef9b87d033efd0614271483a
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2023-01-24 13:45:31 UTC
Created attachment 184873 [details]
Sample file
Comment 2 NISZ LibreOffice Team 2023-01-24 13:46:32 UTC
Created attachment 184875 [details]
Sample file ODP
Comment 3 NISZ LibreOffice Team 2023-01-24 13:46:50 UTC
Created attachment 184876 [details]
Sample file PPTX
Comment 4 NISZ LibreOffice Team 2023-01-24 13:47:34 UTC
Created attachment 184878 [details]
Screenshot of the problem
Comment 5 Commit Notification 2023-01-30 11:25:49 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f589d7e769bee4b82826a944fed3cf2382d84fb2

tdf#153185 PPTX: fix export of linked OLE objects

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 NISZ LibreOffice Team 2023-02-01 08:13:48 UTC
Verified in:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d8e6b488ceaff7c88856ebcfcfec14d2d8cd7652
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded